kubernetes/apps/nuc/external-services/thanos.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: thanos
  namespace: external-services
spec:
  type: ExternalName
  ports:
    - name: http
      port: 80
      targetPort: 80
  externalName: 10.151.14.5
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-adguard
  namespace: external-services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.heimelska.co.uk`)
      kind: Rule
      services:
        - name: thanos
          port: 80
  tls:
    secretName: thanos-adguard-tls
